--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "anper/russian-id",
     "type": "library",
-    "description": "Простой валидатор для российских идентификаторов физических и юридических лиц. Проверяет только checksum.",
+    "description": "Простой валидатор для идентификаторов российских физических и юридических лиц. Проверяет только checksum.",
     "keywords": [
         "rs",
         "ks",
