--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,20 @@
         "orgnip",
         "snils",
         "kpp",
-        "inn"
+        "inn",
+        "check",
+        "validate",
+        "verify",
+        "checksum",
+        "расчётнный счёт",
+        "корреспондентский счёт",
+        "ИНН",
+        "ОМС",
+        "ЕМП",
+        "ОГРН",
+        "ОГРНИП",
+        "СНИЛС",
+        "КПП"
     ],
     "homepage": "https://github.com/perevoshchikov/russian-id",
     "license": "MIT",
