--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         }
     ],
     "require": {
-        "php" : "^7.1||^8.0"
+        "php": "^7.1||^8.0",
+        "ext-mbstring": "*"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.65",
@@ -54,7 +55,7 @@
     },
     "scripts": {
         "test": "phpunit",
-        "analyse": "phpstan analyse src --level=7",
+        "stan": "phpstan analyse src --level=7",
         "check-style": "phpcs -p --standard=PSR12 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
         "fix-style": "phpcbf -p --standard=PSR12 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
     },
