--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     ],
     "require": {
         "php": "^7.1||^8.0",
-        "ext-mbstring": "*"
+        "symfony/polyfill-mbstring": "^1.23"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.65",
