--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "library",
     "description": "Простой валидатор для идентификаторов российских физических и юридических лиц. Проверяет только checksum.",
     "keywords": [
+        "bik",
         "rs",
         "ks",
         "oms",
@@ -18,6 +19,7 @@
         "checksum",
         "расчётнный счёт",
         "корреспондентский счёт",
+        "БИК",
         "ИНН",
         "ОМС",
         "ЕМП",
